<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottomsheet"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/discard"
        android:layout_marginVertical="10dp"
        android:textColor="#A32626"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:layout_marginVertical="10dp"
        android:text="@string/keep_editing"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/save_draft"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>