<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottomsheet"
    android:fitsSystemWindows="true"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/lyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="5dp"
            android:src="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="@string/timer"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyCountDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyHeader"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="@string/countdown"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvLateStartCountDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTimeIndicate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyCountDown"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:fontFamily="@font/inter"
            android:text="@string/_0s"
            android:textColor="#C6C6C6"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal"
            android:text="@string/_8s"
            android:textColor="#C6C6C6"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/_15s"
            android:textColor="#C6C6C6"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyTimeIndicate"
        android:max="15"
        android:progress="5"
        android:progressTint="@color/white"
        android:thumbTint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/set_the_length_of_your_recording"
        android:textColor="#B2FFFFFF"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSetTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInstruction"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_trimanduse_button"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:text="@string/set_timer"
        android:textColor="@color/white"
        android:textSize="13sp" />

</RelativeLayout>