<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_musicactivity"
    android:fitsSystemWindows="true"
    android:paddingHorizontal="20dp"
    android:paddingTop="40dp"
    tools:context=".ui.EditAudioActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:src="@drawable/ic_delete" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:foreground="@drawable/bg_songimage_editaudio"
            android:src="@drawable/image_song_one" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/original_audio"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter"
            android:text="@string/song_name"
            android:textColor="#C6C6C6"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/choose_the_part_you_want_for_your_reel"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/lyManageSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInstruction"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_start" />

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:progress="50"
                android:thumbTint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/inter"
                android:text="@string/_20s"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <com.masoudss.lib.WaveformSeekBar
            android:id="@+id/WaveformSeekBar"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_below="@+id/lyManageSong"
            android:layout_marginTop="13dp"
            app:marker_color="@color/white"
            android:background="@drawable/bg_wavebar"
            app:marker_text_color="@color/white"
            app:marker_text_padding="2dp"
            app:marker_text_size="12dp"
            app:marker_width="1dp"
            app:wave_background_color="@color/white"
            app:wave_corner_radius="4dp"
            app:wave_gap="3dp"
            app:wave_gravity="center"
            app:wave_max_progress="100"
            app:wave_min_height="5dp"
            app:wave_padding_Bottom="2dp"
            app:wave_padding_left="2dp"
            app:wave_padding_right="2dp"
            app:wave_padding_top="2dp"
            app:wave_progress="33"
            app:wave_progress_color="@color/white"
            app:wave_visible_progress="50"
            app:wave_width="3dp" />
        <!-- Start Handle -->
        <ImageView
            android:id="@+id/handleStart"
            android:layout_width="14dp"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:padding="3dp"
            android:src="@drawable/ic_leftmove"
            android:layout_below="@+id/lyManageSong"
            android:layout_gravity="start"
            android:background="@drawable/bg_leftmovehandle" />

        <ImageView
            android:id="@+id/handleEnd"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/lyManageSong"
            android:layout_width="14dp"
            android:padding="3dp"
            android:src="@drawable/ic_rightmove"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rightmovehandle"/>

        <ImageView
            android:id="@+id/playhead"
            android:layout_width="2dp"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/lyManageSong"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/WaveformSeekBar"
            android:layout_marginVertical="30dp"
            android:background="@drawable/bg_trimanduse_button">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/trim_and_use"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>