<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_musicactivity"
    android:padding="20dp"
    tools:context=".ui.VideoEditingActivity">

    <LinearLayout
        android:id="@+id/lyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_semibold"
            android:gravity="end"
            android:text="@string/next1"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyHeader"
        android:orientation="vertical">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_videoview" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_stopbutton"
            android:padding="15dp"
            android:src="@drawable/ic_stop" />

        <com.aghajari.axvideotimelineview.AXVideoTimelineView
            android:id="@+id/axView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:playLine="true"
            app:playProgress="0"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:iconColor="#C6C6C6"
            app:color="#C6C6C6"
            app:roundFrames="false"
            app:timelineColor="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_duration"
                android:textColor="#B2FFFFFF"
                android:layout_marginTop="13dp"
                android:textSize="12sp"
                android:fontFamily="@font/inter_medium"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVideoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_13s"
                android:textColor="#B2FFFFFF"
                android:layout_marginTop="13dp"
                android:textSize="12sp"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_text" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_filter" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_mic" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_music" />
    </LinearLayout>
</RelativeLayout>