<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClose"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_close" />

    <RelativeLayout
        android:id="@+id/lyEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="22dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMusic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_music" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgFilter"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/imgMusic"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_stars" />

        <RelativeLayout
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_below="@id/imgFilter"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgSpeed"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_speed" />

            <RelativeLayout
                android:id="@+id/lySelectedSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSpeedSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_speed_bg" />

                <TextView
                    android:id="@+id/tvSpeedSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/_5x"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgWatch"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/speed"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_time" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgFlash"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/imgWatch"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_flashoff" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_toStartOf="@+id/lyEdit"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <FrameLayout
        android:id="@+id/countDown"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone">

        <com.one.videoeditingapp.ui.CountdownBorderView
            android:id="@+id/borderView"
            android:layout_width="wrap_content"
            android:layout_height="140dp" />

        <TextView
            android:id="@+id/countText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/_3"
            android:textColor="#FFFFFF"
            android:textSize="90sp" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/ryFilter"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_above="@+id/lyCamera"
        android:layout_marginBottom="30dp"
        android:visibility="gone">

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/rcvFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:dsv_orientation="horizontal" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCenterRing"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_filtercenterring"
            android:scaleType="fitCenter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fyCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lyCamera"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_captureborder" />

        <com.one.videoeditingapp.ui.RecordingBorderView
            android:id="@+id/recordingBorderView"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_centerInParent="true" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/captureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_capturebutton" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@+id/lyCamera"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="50dp"
        android:layout_toEndOf="@+id/fyCapture"
        android:indeterminateTint="@color/white"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lyCamera"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="40dp"
        android:layout_toEndOf="@+id/fyCapture"
        android:background="@drawable/bg_trimanduse_button"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="12dp"
        android:paddingVertical="9dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCloseFilter"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_above="@+id/lyCamera"
        android:layout_below="@+id/fyCapture"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="5dp"
        android:src="@drawable/ic_close"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lyCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="26dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_albums" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fontFamily="@font/inter_medium" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgReverseCamera"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_refresh" />
    </LinearLayout>
</RelativeLayout>